src/main/default/objects/Quote__c/fields/Created_in_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Created_in_Mobile__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Created in Mobile</label>
    <type>Checkbox</type>
</CustomField>