src/main/default/objects/Quote__c/fields/Price_Book2__c.field-meta.xml
<CustomField>
    <fullName>Price_Book2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Price Book 2</label>
    <referenceTo>Price_Book__c</referenceTo>
    <relationshipLabel>Quotes - Price Book 2</relationshipLabel>
    <relationshipName>Quotes_Price_Books2</relationshipName>
    <type>Lookup</type>
</CustomField>