src/main/default/objects/Quote__c/fields/Price_Book3__c.field-meta.xml
<CustomField>
    <fullName>Price_Book3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Price Book 3</label>
    <referenceTo>Price_Book__c</referenceTo>
    <relationshipLabel>Quotes - Price Book 3</relationshipLabel>
    <relationshipName>Quotes_Price_Books3</relationshipName>
    <type>Lookup</type>
</CustomField>